<resources>
    <string name="app_name">AndroidAcademy</string>
    <string name="name">Avengers: \nEnd Game</string>
    <string name="pg">13+</string>
    <string name="tag">Action, Adventure, Fantasy</string>
    <string name="reviews">125 Reviews</string>
    <string name="storyline_title">Storyline</string>
    <string name="storyline">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.\n
    After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.\n
    After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="heading">Cast</string>
    <string name="back">Back</string>
    <string name="cast_name">Cast name</string>
    <string name="original_image">Original image</string>
</resources>
