<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fitsSystemWindows="false"
    tools:context=".ui.activities.MovieDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="blocksDescendants">

        <ImageView
            android:id="@+id/orig"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/original_image"
            app:layout_constraintBottom_toBottomOf="@id/imageView"
            app:layout_constraintEnd_toEndOf="@id/imageView"
            app:layout_constraintStart_toStartOf="@id/imageView"
            app:layout_constraintTop_toTopOf="@id/imageView" />

        <View
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/mask"
            app:layout_constraintDimensionRatio="375:298"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/rectangle"
            style="@style/PG"
            android:layout_width="@dimen/amd_rectangle_width"
            android:layout_height="@dimen/amd_rectangle_height"
            android:layout_marginStart="@dimen/spacing_normal_16"
            android:layout_marginBottom="@dimen/spacing_small_8"
            android:background="@drawable/rectangle"
            android:text="@string/pg"
            app:layout_constraintBottom_toTopOf="@+id/name"
            app:layout_constraintStart_toStartOf="parent" />

        <com.pavesid.androidacademy.ui.custom.NoPaddingTextView
            android:id="@+id/name"
            style="@style/Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal_16"
            android:layout_marginEnd="@dimen/spacing_normal_16"
            tools:text="@string/name"
            app:layout_constraintBottom_toBottomOf="@id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <com.pavesid.androidacademy.ui.custom.NoPaddingTextView
            android:id="@+id/tag"
            style="@style/Tag"
            android:layout_width="0dp"
            android:layout_height="@dimen/amd_tag_height"
            android:layout_marginStart="@dimen/spacing_normal_16"
            android:layout_marginEnd="@dimen/spacing_normal_16"
            android:text="@string/tag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <RatingBar
            android:id="@+id/star_icon_5"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal_16"
            android:layout_marginTop="@dimen/spacing_extra_small_4"
            android:max="5"
            android:rating="4"
            android:stepSize="1"
            android:theme="@style/RatingBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tag" />

        <TextView
            android:id="@+id/reviews"
            style="@style/Reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small_8"
            android:text="@string/reviews"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="@+id/star_icon_5"
            app:layout_constraintStart_toEndOf="@+id/star_icon_5"
            app:layout_constraintTop_toTopOf="@+id/star_icon_5" />

        <TextView
            android:id="@+id/storyline_title"
            style="@style/StorylineTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal_16"
            android:layout_marginTop="@dimen/spacing_large_24"
            android:layout_marginEnd="@dimen/spacing_normal_16"
            android:text="@string/storyline_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reviews" />

        <TextView
            android:id="@+id/storyline"
            style="@style/Storyline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal_16"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:layout_marginEnd="@dimen/spacing_normal_16"
            android:letterSpacing="-0.005"
            android:text="@string/storyline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/storyline_title" />

        <TextView
            android:id="@+id/heading"
            style="@style/Heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal_16"
            android:layout_marginTop="@dimen/spacing_extra_large_36"
            android:layout_marginEnd="@dimen/spacing_normal_16"
            android:text="@string/heading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/storyline" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cast_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:layout_marginBottom="@dimen/spacing_large_24"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/nav"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heading"
            tools:listitem="@layout/cast_item" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal_16"
            android:layout_marginTop="@dimen/spacing_extra_extra_large_56"
            android:drawablePadding="@dimen/spacing_small_8"
            android:gravity="center"
            android:lineSpacingExtra="2sp"
            android:text="@string/back"
            android:textColor="@color/back_tint"
            android:textSize="12sp"
            app:drawableStartCompat="@drawable/ic_back"
            app:drawableTint="@color/back_tint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        
        <View
            android:id="@+id/nav"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
