<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fitsSystemWindows="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="blocksDescendants">

        <ImageView
            android:id="@+id/details_orig"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/original_image"
            app:layout_constraintBottom_toBottomOf="@id/details_orig_mask"
            app:layout_constraintEnd_toEndOf="@id/details_orig_mask"
            app:layout_constraintStart_toStartOf="@id/details_orig_mask"
            app:layout_constraintTop_toTopOf="@id/details_orig_mask" />

        <View
            android:id="@+id/details_orig_mask"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/mask"
            app:layout_constraintDimensionRatio="375:298"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/details_rectangle"
            style="@style/DetailsPG"
            android:layout_width="@dimen/amd_rectangle_width"
            android:layout_height="@dimen/amd_rectangle_height"
            android:layout_marginStart="@dimen/spacing_normal_16"
            android:layout_marginBottom="@dimen/spacing_small_8"
            android:background="@drawable/rectangle"
            android:text="@string/pg"
            app:layout_constraintBottom_toTopOf="@+id/details_name"
            app:layout_constraintStart_toStartOf="parent" />

        <com.pavesid.androidacademy.ui.custom.NoPaddingTextView
            android:id="@+id/details_name"
            style="@style/DetailsName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal_16"
            android:layout_marginEnd="@dimen/spacing_normal_16"
            tools:text="@string/name"
            app:layout_constraintBottom_toBottomOf="@id/details_orig_mask"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_orig_mask" />

        <com.pavesid.androidacademy.ui.custom.NoPaddingTextView
            android:id="@+id/details_tag"
            style="@style/Tag"
            android:layout_width="0dp"
            android:layout_height="@dimen/amd_tag_height"
            android:layout_marginStart="@dimen/spacing_normal_16"
            android:layout_marginEnd="@dimen/spacing_normal_16"
            android:text="@string/tag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_name" />

        <me.zhanghai.android.materialratingbar.MaterialRatingBar
            android:id="@+id/details_rating"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal_16"
            android:layout_marginTop="@dimen/spacing_extra_small_4"
            android:max="5"
            android:rating="4"
            android:stepSize="1"
            android:theme="@style/RatingBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_tag" />

        <TextView
            android:id="@+id/details_reviews"
            style="@style/DetailsReviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small_8"
            android:text="@string/reviews"
            app:layout_constraintBottom_toBottomOf="@+id/details_rating"
            app:layout_constraintStart_toEndOf="@+id/details_rating"
            app:layout_constraintTop_toTopOf="@+id/details_rating" />

        <TextView
            android:id="@+id/details_storyline_title"
            style="@style/DetailsStorylineTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal_16"
            android:layout_marginTop="@dimen/spacing_large_24"
            android:layout_marginEnd="@dimen/spacing_normal_16"
            android:text="@string/storyline_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_reviews" />

        <TextView
            android:id="@+id/details_storyline"
            style="@style/DetailsStoryline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal_16"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:layout_marginEnd="@dimen/spacing_normal_16"
            android:letterSpacing="-0.005"
            android:text="@string/storyline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_storyline_title" />

        <TextView
            android:id="@+id/details_heading"
            style="@style/DetailsHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal_16"
            android:layout_marginTop="@dimen/spacing_extra_large_36"
            android:layout_marginEnd="@dimen/spacing_normal_16"
            android:text="@string/heading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_storyline" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/details_cast_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:layout_marginBottom="@dimen/spacing_large_24"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/details_nav"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_heading"
            tools:listitem="@layout/cast_item" />

        <TextView
            android:id="@+id/details_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal_16"
            android:layout_marginTop="@dimen/spacing_extra_extra_large_56"
            android:drawablePadding="@dimen/spacing_small_8"
            android:gravity="center"
            android:lineSpacingExtra="2sp"
            android:text="@string/back"
            android:textColor="@color/back_tint"
            android:textSize="12sp"
            app:drawableStartCompat="@drawable/ic_back"
            app:drawableTint="@color/back_tint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/details_nav"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_nav_48"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
